examples/ingress-resources/upstream-vhost/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    nginx.org/upstream-vhost: "example.internal"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cafe.example.com
      secretName: tls-secret
  rules:
    - host: cafe.example.com
      http:
        paths:
          - path: /coffee
            pathType: Prefix
            backend:
              service:
                name: coffee-svc
                port:
                  number: 80
